add participant limit
